# haskell

./: LICENSE  README.md  lab.cabal  package.yaml  stack.yaml
app/: FileContent.hs  GetSum.hs  Main.hs  NLines.hs  PrintArgs.hs
src/: FirstAndSecondLab.hs  FirstLab.hs  Functions.hs  GetType.hs  HighOrderFunctions.hs  LabsReportGenerator.hs  Library.hs  ListGenerate.hs  MoreHardFunctions.hs  Number.hs  labtext.txt
