cabal-version: 1.12


name:           lab
version:        0.2.0.0
description:    Please see the README on GitHub at https://github.com/Mernus/haskell
homepage:       https://github.com/Mernus/haskell
bug-reports:    https://github.com/Mernus/haskell/issues
author:         Denis Agaev
maintainer:     mernusv@gmail.com
copyright:      2021 Denis Agaev
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Mernus/haskell

library
  exposed-modules:
      GetType
    , LabsReportGenerator
    , Functions
    , MoreHardFunctions
    , ListGenerate
    , Library
    , Number
  other-modules:
      Paths_lab
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , time == 1.11.1.1
  default-language: Haskell2010

executable lab-exe
  main-is: Main.hs
  other-modules:
      Paths_lab
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lab
    , containers
    , time == 1.11.1.1
  default-language: Haskell2010

test-suite lab-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_lab
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lab
    , containers
    , time == 1.11.1.1
  default-language: Haskell2010
